@@ -1,6 +1,6 @@
 Chunky.appname=Chunky
 Chunky.version=1.1.6 snapshot
-Chunky.revision=R20130301
+Chunky.revision=R20130306
 Chunky.icon=/chunky-icon.png
 Controls.SelectWorld_lbl=Select World
 Controls.DeleteSelected_lbl=Delete Selected Chunks
